--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -1,21 +1,10 @@
-<header class="header">
-    <nav>
-        <h3>Management Page</h3>
-        <ul>
-            <li>
-                <a class="navbar-brand" routerLink="adminDashboard">Admin Home</a>
-            </li>
-            <li>
-                <a class="navbar-brand" routerLink="adduser">Add User</a>
-            </li>
-            <li>
-                <a class="navbar-brand" routerLink="ListRestaurant">List Restaurant</a>
-            </li>
-            <li>
-                <a class="navbar-brand" routerLink="AddRestaurant">Add Restaurant</a>
-            </li>
-        </ul>
-    </nav>
-</header>
-<hr>
+
+<a routerLink="login">Login</a>
+<br/>
+<a routerLink="visitors">Visitors</a>
+<br/>
+<a routerLink="hosts">Hosts</a>
+<br/>
+<a routerLink="visitor-form">Visitor-forms</a>
 <router-outlet></router-outlet>
+
